
[TestDashboardView_Overlays/wizard - 1]
TestDashboardView_Overlays/wizard
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": false,
        "FilterQuery": "",
        "SortOrder": "Created ↓",
        "ItemCount": 0,
        "SelectedIndex": 0,
        "HasError": false
      }
    },
    {
      "Type": "*views.WizardView",
      "Data": {
        "Type": "WizardView",
        "Step": 0,
        "Purpose": "",
        "Template": "",
        "TemplateVarCount": 0,
        "RepoCount": 0,
        "FinishMode": false,
        "Loading": false,
        "Done": false
      }
    }
  ]
}
---

[TestDashboardView_Overlays/keyboard_navigation - 1]
TestDashboardView_Overlays/keyboard_navigation
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": false,
        "FilterQuery": "",
        "SortOrder": "Created ↓",
        "ItemCount": 2,
        "SelectedIndex": 0,
        "HasError": false
      }
    }
  ]
}
---
